2016-04-11  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * libgputils/gpprocessor.c:
    Fixed bug: "#288 maxrom settings for 16F1786/16F1787"

2016-04-10  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * doc/gputils.lyx, gplink/gplink.c:
    Renamed commandline option from "--disable-cinit-warnings" to
    "--no-cinit-warnings".

2016-04-06  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * configure.ac, configure:
    Changed from AC_PREREQ(2.59) to AC_PREREQ(2.60).
    Changed Mplabx default path from "/opt/microchip/mplabx/v3.25"
    to "/opt/microchip/mplabx/v3.26".

  * doc/gputils.lyx, gplink/gplink.c, libgputils/gpcoffopt.c,
    libgputils/gpcoffopt.h:
    New commandline options: -C, --disable-cinit-warnings

  * gputils/gpdasm.c, gputils/gplib.c, libgputils/gpsystem.c:
    Fixed a gcc warning.

  * libgputils/gpwritehex.c:
    Minor simplification.

  * libgputils/gparchive.c, libgputils/gpcofflink.c, libgputils/gpdis.c,
    libgputils/gpregister.c, libgputils/gpsym.c:
    Code formatting.

2016-03-20  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * gpasm/coff.c:
    Removed exit() function.

  * gpasm/directive.c, gpasm/gpasm.c, gpasm/lst.c, gpasm/processor.c,
    gputils/gpdasm.c, libgputils/gpdis.c libgputils/gpprocessor.c,
    libgputils/gpprocessor.h:
    Added PIC12I class.

  * gpasm/util.c:
    Code formatting.

  * gplink/gplink.c, gputils/gplib.c:
    Added exit() function.

  * gputils/gpstrip.c:
    Inverted the return value of gp_write_coff() function.
    Code formatting.

  * libgputils/Makefile.am, libgputils/Makefile.in:
    Added gpsym.c and gpsym.h.

  * libgputils/gparchive.c, libgputils/gparchive.h:
    Changed the return type of the gp_archive_extract_member() and
    gp_archive_write() functions. Removed the exit() function.
    Code formatting.

  * libgputils/gpcoff.h, libgputils/gptypes.h:
    New type: hash128_t

  * libgputils/gpcoffgen.c, libgputils/gpcoffgen.h:
    More use the const modifier.
